deployment-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twitter
  namespace: webapps
spec:
  selector:
    matchLabels:
      app: twitterapp
  replicas: 2
  template:
    metadata:
      labels:
        app: twitterapp
    spec:
      containers:
        - name: twitter-application
          image: jeeva08raj/twitter:2nd-release
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: twitterapp-ssvc
  namespace: webapps
spec:
  selector:
    app: twitterapp
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 8080
  type: LoadBalancer
