ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: twitter-ingress
  namespace: webapps

  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: myapp-cert

spec:
  ingressClassName: gce

  rules:
    - host: app.mycoolprojects.online

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: twitterapp-ssvc

                port:
                  number: 80
